:sparkles: Support global ExtensionContext scope configuration for InfraExtension