@@ -36,6 +36,7 @@ import org.junit.jupiter.api.extension.ExtensionContext.Store;
 import org.junit.jupiter.api.extension.ParameterContext;
 import org.junit.jupiter.api.extension.ParameterResolver;
 import org.junit.jupiter.api.extension.TestInstancePostProcessor;
+import org.junit.jupiter.api.extension.TestInstantiationAwareExtension;
 import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.junit.platform.commons.annotation.Testable;
 
@@ -43,21 +44,21 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Executable;
 import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Objects;
+import java.util.Locale;
 
 import infra.beans.factory.annotation.Autowired;
 import infra.beans.factory.annotation.ParameterResolutionDelegate;
 import infra.context.ApplicationContext;
+import infra.core.annotation.MergedAnnotation;
 import infra.core.annotation.MergedAnnotations;
 import infra.core.annotation.MergedAnnotations.SearchStrategy;
 import infra.core.annotation.RepeatableContainers;
 import infra.lang.Assert;
-import infra.test.context.TestConstructor;
-import infra.test.context.TestContext;
+import infra.lang.TodayStrategies;
+import infra.test.context.MethodInvoker;
 import infra.test.context.TestContextAnnotationUtils;
 import infra.test.context.TestContextManager;
 import infra.test.context.event.ApplicationEvents;
@@ -65,8 +66,10 @@ import infra.test.context.event.RecordApplicationEvents;
 import infra.test.context.junit.jupiter.web.JUnitWebConfig;
 import infra.test.context.support.PropertyProvider;
 import infra.test.context.support.TestConstructorUtils;
+import infra.util.ClassUtils;
 import infra.util.ReflectionUtils;
 import infra.util.ReflectionUtils.MethodFilter;
+import infra.util.StringUtils;
 
 /**
  * {@code ApplicationExtension} integrates the <em>TestContext Framework</em>
@@ -77,6 +80,7 @@ import infra.util.ReflectionUtils.MethodFilter;
  * {@code @ApplicationJUnitWebConfig}.
  *
  * @author Sam Brannen
+ * @author <a href="https://github.com/TAKETODAY">海子 Yang</a>
  * @see EnabledIf
  * @see DisabledIf
  * @see JUnitConfig
@@ -88,10 +92,39 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
         BeforeEachCallback, AfterEachCallback, BeforeTestExecutionCallback, AfterTestExecutionCallback, ParameterResolver {
 
   /**
+   * JVM system property used to configure the default {@link ExtensionContextScope}
+   * for the {@code InfraExtension}: {@value}.
+   * <p>Acceptable values include enum constants defined in {@code ExtensionContextScope},
+   * ignoring case. For example, the default may be changed to
+   * {@link ExtensionContextScope#TEST_CLASS} by supplying the following JVM
+   * system property via the command line.
+   * <pre style="code">-Dinfra.test.extension.context.scope=test_class</pre>
+   * <p>If the property is not set, {@link ExtensionContextScope#TEST_METHOD}
+   * semantics will apply. Note, however, that {@code @InfraExtensionConfig}
+   * takes precedence over this property.
+   * <p>May alternatively be configured via the
+   * {@link infra.lang.TodayStrategies TodayStrategies}
+   * mechanism or as a
+   * <a href="https://docs.junit.org/current/running-tests/configuration-parameters.html">JUnit
+   * Platform configuration parameter</a>.
+   *
+   * @see ExtensionContextScope
+   * @see InfraExtensionConfig
+   */
+  public static final String EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME = "infra.test.extension.context.scope";
+
+  /**
    * {@link Namespace} in which {@code TestContextManagers} are stored, keyed
    * by test class.
    */
   private static final Namespace TEST_CONTEXT_MANAGER_NAMESPACE = Namespace.create(InfraExtension.class);
+
+  /**
+   * {@link Namespace} in which the resolved default {@link ExtensionContextScope}
+   * is stored.
+   */
+  private static final Namespace DEFAULT_EXTENSION_CONTEXT_SCOPE_NAMESPACE =
+          Namespace.create(InfraExtension.class.getName() + "#default.extension.context.scope");
 
   /**
    * {@link Namespace} in which {@code @Autowired} validation error messages
@@ -100,7 +133,12 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
   private static final Namespace AUTOWIRED_VALIDATION_NAMESPACE =
           Namespace.create(InfraExtension.class.getName() + "#autowired.validation");
 
-  private static final String NO_VIOLATIONS_DETECTED = "NO VIOLATIONS DETECTED";
+  /**
+   * <em>Marker</em> string constant to represent that no violations were detected.
+   * <p>The value is an empty string which allows this class to perform quick
+   * {@code isEmpty()} checks instead of performing unnecessary string comparisons.
+   */
+  private static final String NO_VIOLATIONS_DETECTED = "";
 
   /**
    * {@link Namespace} in which {@code @RecordApplicationEvents} validation error messages
@@ -112,19 +150,39 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
   // Note that @Test, @TestFactory, @TestTemplate, @RepeatedTest, and @ParameterizedTest
   // are all meta-annotated with @Testable.
   private static final List<Class<? extends Annotation>> JUPITER_ANNOTATION_TYPES =
-          Arrays.asList(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
+          List.of(BeforeAll.class, AfterAll.class, BeforeEach.class, AfterEach.class, Testable.class);
 
   private static final MethodFilter autowiredTestOrLifecycleMethodFilter =
-          ReflectionUtils.USER_DECLARED_METHODS
-                  .and(method -> !Modifier.isPrivate(method.getModifiers()))
-                  .and(InfraExtension::isAutowiredTestOrLifecycleMethod);
+          ReflectionUtils.USER_DECLARED_METHODS.and(InfraExtension::isAutowiredTestOrLifecycleMethod);
+
+  /**
+   * Returns {@link TestInstantiationAwareExtension.ExtensionContextScope#TEST_METHOD
+   * ExtensionContextScope.TEST_METHOD}.
+   * <p>This can be overridden <em>locally</em> via the
+   * {@link InfraExtensionConfig @InfraExtensionConfig} annotation or
+   * <em>globally</em> via the {@value #EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME}
+   * property. See the {@linkplain InfraExtension class-level Javadoc} for further
+   * details.
+   *
+   * @see InfraExtensionConfig#useTestClassScopedExtensionContext()
+   * @see #EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME
+   * @see ExtensionContextScope
+   */
+  @Override
+  public TestInstantiationAwareExtension.ExtensionContextScope getTestInstantiationExtensionContextScope(
+          ExtensionContext rootContext) {
+
+    return TestInstantiationAwareExtension.ExtensionContextScope.TEST_METHOD;
+  }
 
   /**
    * Delegates to {@link TestContextManager#beforeTestClass}.
    */
   @Override
   public void beforeAll(ExtensionContext context) throws Exception {
-    getTestContextManager(context).beforeTestClass();
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.beforeTestClass();
   }
 
   /**
@@ -133,7 +191,9 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
   @Override
   public void afterAll(ExtensionContext context) throws Exception {
     try {
-      getTestContextManager(context).afterTestClass();
+      TestContextManager testContextManager = getTestContextManager(context);
+      registerMethodInvoker(testContextManager, context);
+      testContextManager.afterTestClass();
     }
     finally {
       getStore(context).remove(context.getRequiredTestClass());
@@ -142,15 +202,43 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
 
   /**
    * Delegates to {@link TestContextManager#prepareTestInstance}.
-   * <p>this method also validates that test
-   * methods and test lifecycle methods are not annotated with
-   * {@link Autowired @Autowired}.
+   * <p>This method also validates that test methods and test lifecycle methods
+   * are not annotated with {@link Autowired @Autowired}.
    */
   @Override
   public void postProcessTestInstance(Object testInstance, ExtensionContext context) throws Exception {
+    context = findProperlyScopedExtensionContext(testInstance.getClass(), context);
+
     validateAutowiredConfig(context);
     validateRecordApplicationEventsConfig(context);
-    getTestContextManager(context).prepareTestInstance(testInstance);
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.prepareTestInstance(testInstance);
+  }
+
+  /**
+   * Validate that test methods and test lifecycle methods in the supplied
+   * test class are not annotated with {@link Autowired @Autowired}.
+   */
+  private void validateAutowiredConfig(ExtensionContext context) {
+    // We save the result in the ExtensionContext.Store so that we don't
+    // re-validate all methods for the same test class multiple times.
+    Store store = context.getStore(AUTOWIRED_VALIDATION_NAMESPACE);
+
+    String errorMessage = store.computeIfAbsent(context.getRequiredTestClass(), testClass -> {
+      Method[] methodsWithErrors =
+              ReflectionUtils.getUniqueDeclaredMethods(testClass, autowiredTestOrLifecycleMethodFilter);
+      return (methodsWithErrors.length == 0 ? NO_VIOLATIONS_DETECTED :
+              String.format(
+                      "Test methods and test lifecycle methods must not be annotated with @Autowired. " +
+                              "You should instead annotate individual method parameters with @Autowired, " +
+                              "@Qualifier, or @Value. Offending methods in test class %s: %s",
+                      testClass.getName(), Arrays.toString(methodsWithErrors)));
+    }, String.class);
+
+    if (!errorMessage.isEmpty()) {
+      throw new IllegalStateException(errorMessage);
+    }
   }
 
   /**
@@ -164,7 +252,7 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
     // re-validate the configuration for the same test class multiple times.
     Store store = context.getStore(RECORD_APPLICATION_EVENTS_VALIDATION_NAMESPACE);
 
-    String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(), testClass -> {
+    String errorMessage = store.computeIfAbsent(context.getRequiredTestClass(), testClass -> {
       boolean recording = TestContextAnnotationUtils.hasAnnotation(testClass, RecordApplicationEvents.class);
       if (!recording) {
         return NO_VIOLATIONS_DETECTED;
@@ -186,32 +274,7 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
               published by other tests since the application context may be shared.""";
     }, String.class);
 
-    if (!Objects.equals(errorMessage, NO_VIOLATIONS_DETECTED)) {
-      throw new IllegalStateException(errorMessage);
-    }
-  }
-
-  /**
-   * Validate that test methods and test lifecycle methods in the supplied
-   * test class are not annotated with {@link Autowired @Autowired}.
-   */
-  private void validateAutowiredConfig(ExtensionContext context) {
-    // We save the result in the ExtensionContext.Store so that we don't
-    // re-validate all methods for the same test class multiple times.
-    Store store = context.getStore(AUTOWIRED_VALIDATION_NAMESPACE);
-
-    String errorMessage = store.getOrComputeIfAbsent(context.getRequiredTestClass(), testClass -> {
-      Method[] methodsWithErrors =
-              ReflectionUtils.getUniqueDeclaredMethods(testClass, autowiredTestOrLifecycleMethodFilter);
-      return (methodsWithErrors.length == 0 ? NO_VIOLATIONS_DETECTED :
-              String.format(
-                      "Test methods and test lifecycle methods must not be annotated with @Autowired. " +
-                              "You should instead annotate individual method parameters with @Autowired, " +
-                              "@Qualifier, or @Value. Offending methods in test class %s: %s",
-                      testClass.getName(), Arrays.toString(methodsWithErrors)));
-    }, String.class);
-
-    if (!Objects.equals(errorMessage, NO_VIOLATIONS_DETECTED)) {
+    if (!errorMessage.isEmpty()) {
       throw new IllegalStateException(errorMessage);
     }
   }
@@ -223,7 +286,9 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
   public void beforeEach(ExtensionContext context) throws Exception {
     Object testInstance = context.getRequiredTestInstance();
     Method testMethod = context.getRequiredTestMethod();
-    getTestContextManager(context).beforeTestMethod(testInstance, testMethod);
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.beforeTestMethod(testInstance, testMethod);
   }
 
   /**
@@ -233,7 +298,9 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
   public void beforeTestExecution(ExtensionContext context) throws Exception {
     Object testInstance = context.getRequiredTestInstance();
     Method testMethod = context.getRequiredTestMethod();
-    getTestContextManager(context).beforeTestExecution(testInstance, testMethod);
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.beforeTestExecution(testInstance, testMethod);
   }
 
   /**
@@ -244,7 +311,9 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
     Object testInstance = context.getRequiredTestInstance();
     Method testMethod = context.getRequiredTestMethod();
     Throwable testException = context.getExecutionException().orElse(null);
-    getTestContextManager(context).afterTestExecution(testInstance, testMethod, testException);
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.afterTestExecution(testInstance, testMethod, testException);
   }
 
   /**
@@ -255,7 +324,9 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
     Object testInstance = context.getRequiredTestInstance();
     Method testMethod = context.getRequiredTestMethod();
     Throwable testException = context.getExecutionException().orElse(null);
-    getTestContextManager(context).afterTestMethod(testInstance, testMethod, testException);
+    TestContextManager testContextManager = getTestContextManager(context);
+    registerMethodInvoker(testContextManager, context);
+    testContextManager.afterTestMethod(testInstance, testMethod, testException);
   }
 
   /**
@@ -266,7 +337,7 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
    * <ol>
    * <li>The {@linkplain ParameterContext#getDeclaringExecutable() declaring
    * executable} is a {@link Constructor} and
-   * {@link TestConstructorUtils#isAutowirableConstructor(Constructor, Class, PropertyProvider)}
+   * {@link TestConstructorUtils#isAutowirableConstructor(Executable, PropertyProvider)}
    * returns {@code true}. Note that {@code isAutowirableConstructor()} will be
    * invoked with a fallback {@link PropertyProvider} that delegates its lookup
    * to {@link ExtensionContext#getConfigurationParameter(String)}.</li>
@@ -274,32 +345,37 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
    * <li>The parameter is of type {@link ApplicationEvents} or a sub-type thereof.</li>
    * <li>{@link ParameterResolutionDelegate#isAutowirable} returns {@code true}.</li>
    * </ol>
+   * <p>This method does not {@linkplain #getApplicationContext(ExtensionContext)
+   * load} the {@code ApplicationContext} or verify that the application context
+   * actually contains a matching candidate bean, since doing so would potentially
+   * load an application context too early or unnecessarily.
    * <p><strong>WARNING</strong>: If a test class {@code Constructor} is annotated
-   * with {@code @Autowired} or automatically autowirable (see {@link TestConstructor}),
+   * with {@code @Autowired} or automatically autowirable (see
+   * {@link infra.test.context.TestConstructor @TestConstructor}),
    * Infra will assume the responsibility for resolving all parameters in the
    * constructor. Consequently, no other registered {@link ParameterResolver}
    * will be able to resolve parameters.
    *
    * @see #resolveParameter
-   * @see TestConstructorUtils#isAutowirableConstructor(Constructor, Class)
+   * @see TestConstructorUtils#isAutowirableConstructor(Executable, PropertyProvider)
    * @see ParameterResolutionDelegate#isAutowirable
    */
   @Override
   public boolean supportsParameter(ParameterContext parameterContext, ExtensionContext extensionContext) {
     Parameter parameter = parameterContext.getParameter();
+    Class<?> parameterType = parameter.getType();
     Executable executable = parameter.getDeclaringExecutable();
-    Class<?> testClass = extensionContext.getRequiredTestClass();
     PropertyProvider junitPropertyProvider = propertyName ->
             extensionContext.getConfigurationParameter(propertyName).orElse(null);
-    return (TestConstructorUtils.isAutowirableConstructor(executable, testClass, junitPropertyProvider) ||
-            ApplicationContext.class.isAssignableFrom(parameter.getType()) ||
-            supportsApplicationEvents(parameterContext) ||
+    return (TestConstructorUtils.isAutowirableConstructor(executable, junitPropertyProvider) ||
+            ApplicationContext.class.isAssignableFrom(parameterType) ||
+            supportsApplicationEvents(parameterType, executable) ||
             ParameterResolutionDelegate.isAutowirable(parameter, parameterContext.getIndex()));
   }
 
-  private boolean supportsApplicationEvents(ParameterContext parameterContext) {
-    if (ApplicationEvents.class.isAssignableFrom(parameterContext.getParameter().getType())) {
-      Assert.isTrue(parameterContext.getDeclaringExecutable() instanceof Method,
+  private static boolean supportsApplicationEvents(Class<?> parameterType, Executable executable) {
+    if (ApplicationEvents.class.isAssignableFrom(parameterType)) {
+      Assert.isTrue(executable instanceof Method,
               "ApplicationEvents can only be injected into test and lifecycle methods");
       return true;
     }
@@ -315,47 +391,73 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
    * @see ParameterResolutionDelegate#resolveDependency
    */
   @Override
-  @Nullable
-  public Object resolveParameter(ParameterContext parameterContext, ExtensionContext extensionContext) {
+  public @Nullable Object resolveParameter(ParameterContext parameterContext, ExtensionContext extensionContext) {
     Parameter parameter = parameterContext.getParameter();
     int index = parameterContext.getIndex();
+    Executable executable = parameterContext.getDeclaringExecutable();
     Class<?> testClass = extensionContext.getRequiredTestClass();
+    if (executable instanceof Constructor<?> constructor) {
+      testClass = constructor.getDeclaringClass();
+      extensionContext = findProperlyScopedExtensionContext(testClass, extensionContext);
+    }
+
     ApplicationContext applicationContext = getApplicationContext(extensionContext);
     return ParameterResolutionDelegate.resolveDependency(parameter, index, testClass,
             applicationContext.getAutowireCapableBeanFactory());
   }
 
   /**
-   * Get the {@link ApplicationContext} associated with the supplied {@code ExtensionContext}.
+   * Get the {@link ApplicationContext} associated with the supplied {@link ExtensionContext}.
+   * <p><strong>NOTE</strong>: As of 5.0, the supplied
+   * {@code ExtensionContext} may not be properly <em>scoped</em>. See the
+   * {@linkplain InfraExtension class-level Javadoc} for further details.
+   * <p><strong>WARNING</strong>: Invoking this method ensures that the
+   * corresponding {@code ApplicationContext} is
+   * {@linkplain infra.test.context.TestContext#getApplicationContext()
+   * loaded}. Consequently, this method should not be used if eager loading of
+   * the application context is undesired. For example,
+   * {@link #supportsParameter(ParameterContext, ExtensionContext)} intentionally
+   * does not invoke this method, since doing so would potentially load an
+   * application context too early or unnecessarily.
    *
    * @param context the current {@code ExtensionContext} (never {@code null})
    * @return the application context
    * @throws IllegalStateException if an error occurs while retrieving the application context
-   * @see TestContext#getApplicationContext()
+   * @see infra.test.context.TestContext#getApplicationContext()
    */
   public static ApplicationContext getApplicationContext(ExtensionContext context) {
     return getTestContextManager(context).getTestContext().getApplicationContext();
   }
 
   /**
-   * Get the {@link TestContextManager} associated with the supplied {@code ExtensionContext}.
+   * Get the {@link TestContextManager} associated with the supplied {@link ExtensionContext}.
    *
    * @return the {@code TestContextManager} (never {@code null})
    */
   static TestContextManager getTestContextManager(ExtensionContext context) {
-    Assert.notNull(context, "ExtensionContext is required");
+    Assert.notNull(context, "ExtensionContext must not be null");
     Class<?> testClass = context.getRequiredTestClass();
     Store store = getStore(context);
-    return store.getOrComputeIfAbsent(testClass, TestContextManager::new, TestContextManager.class);
+    return store.computeIfAbsent(testClass, TestContextManager::new, TestContextManager.class);
   }
 
   private static Store getStore(ExtensionContext context) {
     return context.getRoot().getStore(TEST_CONTEXT_MANAGER_NAMESPACE);
   }
 
+  /**
+   * Register a {@link MethodInvoker} adaptor for Jupiter's
+   * {@link org.junit.jupiter.api.extension.ExecutableInvoker ExecutableInvoker}
+   * in the {@link infra.test.context.TestContext TestContext} for
+   * the supplied {@link TestContextManager}.
+   */
+  private static void registerMethodInvoker(TestContextManager testContextManager, ExtensionContext context) {
+    testContextManager.getTestContext().setMethodInvoker(context.getExecutableInvoker()::invoke);
+  }
+
   private static boolean isAutowiredTestOrLifecycleMethod(Method method) {
     MergedAnnotations mergedAnnotations =
-            MergedAnnotations.from(method, SearchStrategy.DIRECT, RepeatableContainers.NONE);
+            MergedAnnotations.from(method, SearchStrategy.DIRECT, RepeatableContainers.none());
     if (!mergedAnnotations.isPresent(Autowired.class)) {
       return false;
     }
@@ -365,6 +467,140 @@ public class InfraExtension implements BeforeAllCallback, AfterAllCallback, Test
       }
     }
     return false;
+  }
+
+  /**
+   * Find the properly scoped {@link ExtensionContext} for the supplied test class.
+   * <p>If the supplied {@code ExtensionContext} is already properly scoped, it
+   * will be returned. Otherwise, if test-class scoped semantics apply (see
+   * {@linkplain InfraExtension class-level Javadoc}), this method searches the
+   * {@code ExtensionContext} hierarchy for an {@code ExtensionContext} whose test
+   * class is the same as the supplied test class.
+   *
+   * @see InfraExtensionConfig#useTestClassScopedExtensionContext()
+   * @see #EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME
+   * @see ExtensionContextScope
+   */
+  private static ExtensionContext findProperlyScopedExtensionContext(Class<?> testClass, ExtensionContext context) {
+    if (shouldUseTestClassScopedExtensionContext(testClass, context)) {
+      while (context.getRequiredTestClass() != testClass) {
+        context = context.getParent().get();
+      }
+    }
+    return context;
+  }
+
+  /**
+   * Determine whether test-class scoped {@code ExtensionContext} semantics apply
+   * for the supplied test class.
+   */
+  private static boolean shouldUseTestClassScopedExtensionContext(Class<?> testClass, ExtensionContext context) {
+    MergedAnnotation<InfraExtensionConfig> mergedAnnotation =
+            MergedAnnotations.search(SearchStrategy.TYPE_HIERARCHY)
+                    .withEnclosingClasses(ClassUtils::isInnerClass)
+                    .from(testClass)
+                    .get(InfraExtensionConfig.class);
+
+    if (mergedAnnotation.isPresent()) {
+      if (mergedAnnotation.getSource() instanceof Class<?> source && ClassUtils.isInnerClass(source)) {
+        throw new IllegalStateException("""
+                Test class [%s] must not be annotated with @InfraExtensionConfig. \
+                @InfraExtensionConfig is only supported on top-level classes.\
+                """.formatted(source.getName()));
+      }
+      return mergedAnnotation.getBoolean("useTestClassScopedExtensionContext");
+    }
+
+    return resolveDefaultExtensionContextScope(context) == ExtensionContextScope.TEST_CLASS;
+  }
+
+  /**
+   * Resolve the default {@link ExtensionContextScope} from the
+   * {@value #EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME} property, first via
+   * {@link TodayStrategies} and then via
+   * {@link ExtensionContext#getConfigurationParameter(String)} as a fallback
+   * strategy if the Infra property is not set.
+   *
+   * @param context the current {@code ExtensionContext}
+   * @return the resolved scope, or {@link ExtensionContextScope#TEST_METHOD}
+   * if the property is not set
+   */
+  private static ExtensionContextScope resolveDefaultExtensionContextScope(ExtensionContext context) {
+    return context.getRoot().getStore(DEFAULT_EXTENSION_CONTEXT_SCOPE_NAMESPACE)
+            .computeIfAbsent(ExtensionContextScope.class, key -> {
+              String infraValue = TodayStrategies.getProperty(EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME);
+              ExtensionContextScope scope = ExtensionContextScope.from(infraValue);
+              if (scope != null) {
+                return scope;
+              }
+              rejectUnsupportedScope(infraValue);
+
+              String junitValue = context.getConfigurationParameter(EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME)
+                      .orElse(null);
+              scope = ExtensionContextScope.from(junitValue);
+              if (scope != null) {
+                return scope;
+              }
+              rejectUnsupportedScope(junitValue);
+
+              // Default to test-method scope.
+              return ExtensionContextScope.TEST_METHOD;
+            }, ExtensionContextScope.class);
+  }
+
+  private static void rejectUnsupportedScope(@Nullable String scope) {
+    if (StringUtils.hasText(scope)) {
+      throw new IllegalArgumentException("Unsupported value '%s' for property '%s'"
+              .formatted(scope.strip(), EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME));
+    }
+  }
+
+  /**
+   * Enumeration of <em>extension context scopes</em> for configuring how the
+   * {@link InfraExtension} resolves an {@link ExtensionContext} within
+   * {@code @Nested} test class hierarchies.
+   *
+   * @see InfraExtension#EXTENSION_CONTEXT_SCOPE_PROPERTY_NAME
+   * @see InfraExtensionConfig
+   * @see org.junit.jupiter.api.extension.TestInstantiationAwareExtension.ExtensionContextScope
+   */
+  public enum ExtensionContextScope {
+
+    /**
+     * Use a test-method scoped {@link ExtensionContext} within {@code @Nested}
+     * test class hierarchies.
+     *
+     * @see org.junit.jupiter.api.extension.TestInstantiationAwareExtension.ExtensionContextScope#TEST_METHOD
+     */
+    TEST_METHOD,
+
+    /**
+     * Use a test-class scoped {@link ExtensionContext} within {@code @Nested}
+     * test class hierarchies.
+     *
+     * @see org.junit.jupiter.api.extension.TestInstantiationAwareExtension.ExtensionContextScope#DEFAULT
+     */
+    TEST_CLASS;
+
+    /**
+     * Get the {@link ExtensionContextScope} enum constant with the supplied name,
+     * {@linkplain String#strip() stripped} and ignoring case.
+     *
+     * @param name the name of the enum constant to retrieve
+     * @return the corresponding enum constant, or {@code null} if not found
+     * @see ExtensionContextScope#valueOf(String)
+     */
+    static @Nullable ExtensionContextScope from(@Nullable String name) {
+      if (!StringUtils.hasText(name)) {
+        return null;
+      }
+      try {
+        return ExtensionContextScope.valueOf(name.strip().toUpperCase(Locale.ROOT));
+      }
+      catch (IllegalArgumentException ex) {
+        return null;
+      }
+    }
   }
 
 }
